# gh-otco-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/tests/: api_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
docs/: product-requirements-doc.md  technical-design-doc.md
