[package]
name = "gh-otco-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"

# Async runtime used implicitly by consumers
tokio = { version = "1", features = ["macros"], optional = true }

[features]
default = []

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
