[package]
name = "gh-otco-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
gh-otco-api = { path = "../api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
csv = "1"
comfy-table = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
home = "0.5"
keyring = "2"
rpassword = "7"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"

# Optional OpenTelemetry exporter wiring
tracing-opentelemetry = { version = "0.27", optional = true }
opentelemetry = { version = "0.24", features = ["trace"], optional = true }
opentelemetry-otlp = { version = "0.17", optional = true }

[features]
otel = ["tracing-opentelemetry", "opentelemetry", "opentelemetry-otlp"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
